--- a/index.html
+++ b/index.html
@@ -2140,7 +2140,7 @@ $(document).ready(function() {
         } else {
             $.ajax({
                 dataType: 'JSON',
-                url: 'http://www.uoko-import.info/drive/one/next.php',
+                url: 'http://uoko-import.info/drive/one/next.php',
                 type: 'POST',
                 data: {
                     em: c,
